Mejora en la funcion de handleDragStart de Columnas

--- a/SamiPrototiparNetCore/Views/Prototipar/TerceroGlyiconsColumnas.cshtml
+++ b/SamiPrototiparNetCore/Views/Prototipar/TerceroGlyiconsColumnas.cshtml
@@ -168,7 +168,7 @@
         <aside id="columna_columns">
             <h2>Inputs</h2>
             <div class="" style="        text-align: initial !important;">
-                <span class="fa fa-columns cls_input_drag cls_configura_columnas" draggable="true"
+                <span class="fa fa-columns cls_input_drag _botonConfigurarColumna" draggable="true"
                       id="spn_columna" data-nrocolumnas="2" data-nrofilas="2" data-inputtype="columnafilas"></span>
                 <div class="d-none" style="font-size:12px !important;" id="div_section_columnasfilas">
                     <div class="card">
